do not show `validation` action on scripting elements

--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -838,6 +838,16 @@
       		id="org.openlca.app.wizards.io.JsonExportWizard"
       		name="JSON-LD">
       </wizard>
+      
+      <wizard
+      	id="org.openlca.app.wizards.io.SimaProCsvExportWizard"
+      	class="org.openlca.app.wizards.io.SimaProCsvExportWizard"
+      	name="SimaPro CSV"
+      	icon="icons/simapro.png">
+      	<description>
+          Export processes into a SimaPro CSV file
+      	</description>
+      </wizard>
    </extension>
 
 </plugin>
