--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -291,6 +291,14 @@
             name="Flow mapping"
             contributorClass="org.openlca.app.tools.mapping.MappingMenu">
       </editor>
+      
+      <editor
+            class="org.openlca.app.tools.libraries.LibraryInfoPage"
+      	    default="false"
+      	    icon="icons/model/flow.png"
+      	    id="LibraryInfoPage"
+      	    name="Library">
+      </editor>
 
    </extension>
 
