--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -29,11 +29,10 @@
 	<classpathentry exported="true" kind="lib" path="libs/log4j-1.2.17.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mapdb-2.0-beta7.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mimepull-1.9.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/msgpack-core-0.8.20.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mysql-connector-java-8.0.16.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/nanohttpd-2.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-cloud-2.0.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-core-2.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-core-2.0.0.jar" sourcepath="/olca-core"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-1-2.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-2-2.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-formula-2.0.0.jar"/>
