--- a/olca-app/pom.xml
+++ b/olca-app/pom.xml
@@ -60,7 +60,7 @@
 		<dependency>
 			<groupId>org.python</groupId>
 			<artifactId>jython-standalone</artifactId>
-			<version>2.7.2b2</version>
+			<version>2.7.2</version>
 		</dependency>
 
 		<dependency>
