--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="libs/commons-collections4-4.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/commons-compress-1.19.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/curvesapi-1.06.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/poi-4.1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/poi-ooxml-4.1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/poi-ooxml-schemas-4.1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/SparseBitSet-1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/xmlbeans-3.1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jython-standalone-2.7.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-beanutils-1.9.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-codec-1.9.jar"/>
@@ -45,9 +53,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.core-2.7.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa.jpql-2.7.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa-2.7.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/poi-3.12.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/poi-ooxml-3.12.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/poi-ooxml-schemas-3.12.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/protobuf-java-3.12.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/protobuf-java-util-3.12.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/slf4j-api-1.7.25.jar"/>
@@ -56,7 +61,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/super-csv-2.4.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/trove4j-3.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/txw2-2.3.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/xmlbeans-2.6.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/zt-zip-1.8.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
