--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -179,7 +179,7 @@
             name="Social indicator">
       </editor>
       <editor
-            class="org.openlca.app.editors.costs.CurrencyEditor"
+            class="org.openlca.app.editors.currencies.CurrencyEditor"
             default="false"
             icon="icons/model/currency.png"
             id="editors.currency"
