add option to hide the welcome page

--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -665,7 +665,7 @@
             class="org.openlca.app.logging.LoggerPreference">
       </initializer>
       <initializer
-            class="org.openlca.app.Preferences">
+            class="org.openlca.app.preferences.Preferences">
       </initializer>
       <initializer
             class="org.openlca.app.preferences.IoPreference">
