#92: add a new import menu

--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -616,7 +616,7 @@
          </possibleChildren>
       </navigatorContent>
       <actionProvider
-            class="org.openlca.app.navigation.actions.NavigationActionProvider"
+            class="org.openlca.app.navigation.actions.NavigationMenu"
             id="actionprovider.navigation"
             priority="normal">
             <enablement />
