--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -3,17 +3,17 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="libs/jython-standalone-2.7.2b2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/super-csv-2.4.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-cloud-1.9.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-core-1.9.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-1-1.9.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-2-1.9.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-formula-1.9.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-geo-1.9.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ilcd-1.9.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-io-1.9.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-ipc-1.9.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-jsonld-1.9.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-1.9.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-cloud-1.11.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-core-1.11.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-1-1.11.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ecospold-2-1.11.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-formula-1.11.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-geo-1.11.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ilcd-1.11.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-io-1.11.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-ipc-1.11.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-jsonld-1.11.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-1.11.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/slf4j-api-1.7.25.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/slf4j-log4j12-1.7.25.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.antlr-2.7.3.jar"/>
@@ -83,6 +83,8 @@
 	<classpathentry exported="true" kind="lib" path="libs/jai_codec-1.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jai_core-1.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jai_imageio-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/search-wrapper-1.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/xml-apis-1.0.b2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="bin"/>
