--- a/olca-app/pom.xml
+++ b/olca-app/pom.xml
@@ -80,6 +80,12 @@
 			<artifactId>olca-geo</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.greendelta.search</groupId>
+			<artifactId>search-wrapper</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.python</groupId>
