--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -17,4 +17,18 @@ bin.includes = plugin.xml,\
                html/,\
                plugin_customization.ini,\
                db_templates/,\
-               libs/
+               libs/,\
+               libs/animal-sniffer-annotations-1.18.jar,\
+               libs/annotations-4.1.1.4.jar,\
+               libs/annotations-api-6.0.53.jar,\
+               libs/grpc-api-1.32.2.jar,\
+               libs/grpc-context-1.32.2.jar,\
+               libs/grpc-core-1.32.2.jar,\
+               libs/grpc-netty-shaded-1.32.2.jar,\
+               libs/grpc-protobuf-1.32.2.jar,\
+               libs/grpc-protobuf-lite-1.32.2.jar,\
+               libs/grpc-stub-1.32.2.jar,\
+               libs/jsr305-3.0.2.jar,\
+               libs/olca-proto-2.0.0.jar,\
+               libs/perfmark-api-0.19.0.jar,\
+               libs/proto-google-common-protos-1.17.0.jar
