--- a/olca-app/pom.xml
+++ b/olca-app/pom.xml
@@ -101,9 +101,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.16</version>
+  		<groupId>org.mariadb.jdbc</groupId>
+  		<artifactId>mariadb-java-client</artifactId>
+  		<version>2.7.2</version>
 		</dependency>
 
 		<dependency>
