--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="libs/jakarta.persistence-api-3.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.asm-3.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.core-3.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa.jpql-3.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa-3.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/HikariCP-4.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mariadb-java-client-2.7.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/animal-sniffer-annotations-1.18.jar"/>
@@ -40,7 +45,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/guava-21.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/istack-commons-runtime-3.0.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jakarta.activation-api-1.2.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jakarta.persistence-2.2.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jakarta.xml.bind-api-2.3.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jaxb-runtime-2.3.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jcl-over-slf4j-1.7.2.jar"/>
@@ -62,11 +66,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/olca-io-2.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-ipc-2.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/olca-simapro-csv-2.0.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.antlr-2.7.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.asm-2.7.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.core-2.7.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa.jpql-2.7.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/org.eclipse.persistence.jpa-2.7.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/protobuf-java-3.12.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/protobuf-java-util-3.12.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/slf4j-api-1.7.25.jar"/>
