--- a/olca-app/.classpath
+++ b/olca-app/.classpath
@@ -83,7 +83,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/jai_codec-1.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jai_core-1.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jai_imageio-1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/search-wrapper-1.0.0.jar"/>
+	<classpathentry kind="lib" path="libs/search-wrapper-1.1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/xml-apis-1.0.b2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
