--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -495,7 +495,7 @@
          </property>
          <property
                name="aboutText"
-               value="openLCA 1.11.0&#x0A;&#x0A;Copyright (c) 2007 - 2020 GreenDelta. All rights reserved.&#x0A;Visit http://openlca.org and http://greendelta.com&#x0A;&#x0A;This product includes software developed in the openLCA &#x0A;project and other open source software.">
+               value="openLCA 1.11.0&#x0D;&#x0A;&#x0D;&#x0A;Copyright (c) 2007 - 2021 GreenDelta. All rights reserved.&#x0D;&#x0A;Visit http://openlca.org and http://greendelta.com&#x0D;&#x0A;&#x0D;&#x0A;This product includes software developed in the openLCA &#x0D;&#x0A;project and other open source software.">
          </property>
          <property
                name="aboutImage"
@@ -513,7 +513,7 @@
                value="openLCA" />
          <property
                name="startupProgressRect"
-               value="0,412,594,5">
+               value="0,429,586,5">
          </property>
          <property
                name="startupForegroundColor"
