upgrade on Eclipse 4.19
on Windows, WebView2 can be enabled via

```
-Dorg.eclipse.swt.browser.DefaultType=edge
```

(https://www.eclipse.org/swt/faq.php)

--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -513,7 +513,7 @@
          </property>
          <property
                name="aboutText"
-               value="openLCA 2.0.0&#x0A;&#x0A;Copyright (c) 2007 - 2020 GreenDelta. All rights reserved.&#x0A;Visit http://openlca.org and http://greendelta.com&#x0A;&#x0A;This product includes software developed in the openLCA &#x0A;project and other open source software.">
+               value="openLCA 2.0.0&#x0D;&#x0A;&#x0D;&#x0A;Copyright (c) 2007 - 2021 GreenDelta. All rights reserved.&#x0D;&#x0A;Visit http://openlca.org and http://greendelta.com&#x0D;&#x0A;&#x0D;&#x0A;This product includes software developed in the openLCA &#x0D;&#x0A;project and other open source software.">
          </property>
          <property
                name="aboutImage"
@@ -540,6 +540,10 @@
          <property
                name="startupMessageRect"
                value="7,525,445,20">
+         </property>
+         <property
+               name="preferenceCustomization"
+               value="plugin_customization.ini">
          </property>
       </product>
    </extension>
