move validation components to `tools`
open models from messages on double click

--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -300,7 +300,7 @@
       </editor>
 
 			<editor
-						class="org.openlca.app.validation.ValidationResultView"
+						class="org.openlca.app.tools.ValidationResultView"
 						default="false"
 						icon="icons/validate.png"
 						id="ValidationResultView"
