open the import dialog from the DownloadWizard

--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -781,7 +781,7 @@
           name="Repository import">
      </wizard>
 		 <wizard
-			 class="org.openlca.app.editors.results.openepd.ImportWizard"
+			 class="org.openlca.app.editors.results.openepd.input.DownloadWizard"
 			 icon="icons/building.png"
 			 id="wizard.import.openepd"
 			 name="OpenEPD / EC3 import">
